# py-peirrs

./: .gitignore  COPILOT_INSTRUCTIONS.md  README.md  group-label-test.py  pyproject.toml
src/peirrs/: __init__.py  estimators.py  simulate.py  utils.py
src/peirrs/multitype/: __init__.py  estimators.py  simulate.py
src/peirrs/spatial/: __init__.py  estimators.py  simulate.py
tests/: test_estimators.py  test_multitype.py  test_simulate.py  test_utils.py
