[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peirrs"
version = "0.0.1"
authors = [
  { name="Seth D. Temple", email="sethtem@umich.edu" },
]
description = "Pair-based estimators of infection and removal times"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "pandas"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.sdist]
include = ["src", "docs"]

[project.urls]
"Homepage" = "https://github.com/sdtemple/peirrs"
"Bug Tracker" = "https://github.com/sdtemple/peirrs/issues"